--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,7 @@ edition = "2018"
 [dependencies]
 protocol = "3.1.1"
 protocol-derive = "3.1.1"
+x25519-dalek = "0.5.2"
+ed25519-dalek = "0.8.1"
 futures-preview = "0.3.0-alpha.15"
 derive-error = "0.0.4"
