--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ x25519-dalek = "0.5.2"
 ed25519-dalek = "0.8.1"
 futures-preview = "0.3.0-alpha.15"
 derive-error = "0.0.4"
+rand = "0.6.5"
+sha2 = "0.8.0"
